The search results no longer have a weird horizontal scroll

--- a/src/styles/features/search.css
+++ b/src/styles/features/search.css
@@ -112,6 +112,18 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 1em 0;
+}
+
+@media (max-width: 700px) {
+  .search-tools {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.search-pathways-header {
+  margin: 0;
 }
 
 .search-result-hit-count {
@@ -216,9 +228,6 @@
 
 .search-filters {
   font-size: 12px;
-  height: 13px;
-  display: flex;
-  flex-direction: row;
 }
 
 .search-datasource-filter {
